<resources>
    <string name="app_name">Conoce la Alhambra</string>
    <string name="infantil">Modo Infantil</string>
    <string name="adulto">Modo Adulto</string>
    <string name="botonTutorial"><b>¿Cómo funciona esta app?</b></string>
    <string name="botonAlhambrapedia" translatable="false"><b>Alhambrapedia</b></string>
    <string name="botonMapa"><b>¿Dónde estoy?</b></string>
    <string name="botonQR"><b>Lector QR</b></string>
    <string name="botonGiroscopio" translatable="false"><b>Alhambra 360º</b></string>
    <string name="botonSociedad"><b>La sociedad en la Alhambra</b></string>
    <string name="botonNaturaleza"><b>La naturaleza en la Alhambra</b></string>
    <string name="botonHistoria"><b>La historia en la Alhambra</b></string>
    <string name="botonArte">El arte en la Alhambra</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="mensajeQR">Encuadre el código QR</string>
    <string name="version"><b><font fgcolor='#0000FF'>Versión:</font></b> <font fgcolor='#000000'>1.0</font> </string>
    <string name="autores"><b><font fgcolor="#0000FF"> Autores:</font></b> <font fgcolor="#000000"> \t\t Alberto Lejárraga Rubio  \t\t Christian Vigil Zamora  \t\t Francisco Cano Sampedro  \t\t Sergio Aguilera Ramírez </font></string>
    <string name="aprender"><b>Aprender</b></string>
    <string name="cuestionario" translatable="false"><b>Cuestionario</b></string>
    <string name="sabiasQueBoton" translatable="false"><b>Sabías que...</b></string>
    <string name="sabiasQue" translatable="false"><b><font fgcolor='#000000' size="30">Sabías que ... </font></b></string>
    <string name="datoCurioso1" translatable="false"><b><font fgcolor='#424242'>- En la Alhambra vivía el monarca junto a la corte del Reino Nazarí de Granada. </font></b></string>
    <string name="datoCurioso2" translatable="false"><b><font fgcolor='#424242'>- La fuente de los leoes consta de 12 leones  </font></b></string>
    <string name="datoCurioso3" translatable="false"><b><font fgcolor='#424242'>- La Alhambra se divide en las siguientes zonas: \n\t\t   la Alcazaba \n\t\t    los Palacios Nazaríes \n\t\t   la Medina \n\t\t   el Generalife \n\t\t   la Rauda \n\t\t  el Palacio de Carlos V. </font></b></string>
    <string name="datoCurioso4" translatable="false"><b><font fgcolor='#424242'>- La Alhambra dispone de 23 torres. </font></b></string>
    <string name="datoCurioso5" translatable="false"><b><font fgcolor='#424242'>- La puerta que custodia el acceso a la Alhambra es conocida
        como la Puerta de la Justicia. Sobre ella y su grandeza reza una leyenda: si existiese un caballero en la Tierra que al pasar a caballo bajo su arco exterior fuese capaz de tocar con la punta de su lanza la mano esculpida en lo más alto, suyo sería el trono del reino de Granada. </font></b></string>
    <string name="datoCurioso6" translatable="false"><b><font fgcolor='#424242'>- En una de las últimas obras de rehabilitación, los restauradores descubrieron 80 dibujos policromados con figuras animales y humanas que permanecían ocultos bajo la madera y el yeso desde la época de la dominación musulmana. </font></b></string>
    <string name="datoCurioso7" translatable="false"><b><font fgcolor='#424242'>- La Alhambra empezó a construirse en el siglo IX.  </font></b></string>
    <string name="datoCurioso8" translatable="false"><b><font fgcolor='#424242'>- La Alhambra esta construida sobre la colina de la Sabika. </font></b></string>
    <string name="datoCurioso9" translatable="false"><b><font fgcolor='#424242'>- Las entradas de la Alhambra son: \n\t\t Puerta de la Justicia \n\t\t Plaza de los Aljibes \n\t\t Puerta del Vino  \n\t\t Puerta de las armas \n\t\t Puerta de los siete cielos</font></b></string>
    <string name="datoCurioso10" translatable="false"><b><font fgcolor='#424242'>- La Alcazaba era un barrio militar, en el que vivían los soldados separados de resto de la Alhambra. \n Estaba rodeado de murallas y torres de vigilancia. Tenía dos puertas al exterior, construidas «en recodo» que estaban custodiadas
    por soldados, para que nadie pudiese pasar
    sin ser visto.</font></b></string>
    <string name="datoCurioso11" translatable="false"><b><font fgcolor='#424242'>- En la Alcazaba no había agua, ningunafuente o nacimiento para abastecer lasnecesidades de la población. Por eso una de las primeras actuaciones que sehicieron, fue construir una acequia paratraer agua del río Darro: la Acequia Real yun aljibe. El aljibe era un depósito dónde
    el agua de la acequia entraba, reposaba,se limpiaba y se almacenaba lista para eluso público. Observa en el esquema, el aljibe de la Alcazaba.</font></b></string>
    <string name="datoCurioso12" translatable="false"><b><font fgcolor='#424242'>- La Madraza de los Príncipes era una escuela-universidad que  crearon los árabes con la idea de que  asistieran personas de todas las religiones a estudiar ciencia y filosofía.  Ésta de la Alhambra, era exclusiva de  la familia real. Además de la sala de
    estudio, tenía una pila de abluciones, un oratorio y otras estancias para los funcionarios.</font></b></string>
     <string name="patioLeones" translatable="false"><b><font fgcolor='#000000'>Patio de los Leones</font></b></string>
    <string name="salaReyes" translatable="false"><b><font fgcolor='#000000'>Sala de los Reyes</font></b></string>
    <string name="generalife" translatable="false"><b><font fgcolor='#000000'>Generalife</font></b></string>
    <string name="salaMocarabes" translatable="false"><b><font fgcolor='#000000'>Sala de Mocárabes</font></b></string>
    <string name="salaBarca" translatable="false"><b><font fgcolor='#000000'>Sala de la Barca</font></b></string>
    <string name="question">Pregunta</string>
    <string name="check">Comprobar</string>
    <string name="correct">¡Muy bien!</string>
    <string name="incorrect">Incorrecto...</string>
    <string name="next">Siguiente</string>
    <string name="finish">Terminar</string>
    <string name="prev">Anterior</string>
    <string name="results">Resultados</string>
    <string name="start_over">Volver a empezar</string>
    <string name="siglo">Siglos</string>
    <string name="sigloA">Los árabes respetaron las ciudades y vías romanas ampliándolas y añadiéndoles nuevas fundaciones. En el siglo IX existen noticias de construcciones en la colina de la Sabika, donde posteriormente se levantará la Alhambra, aunque se cree que ya en época romana e incluso antes debió haber alguna edificación. Tras la guerra civil que sucedió al Califato de Córdoba(1031), la capital de la hasta entonces provincia granadina, se traslada de Elvira a Granada, con el Reino de Taifa granadino de los Ziríes. Estos establecen su corte en la Alcazaba Cadima o Vieja, situada en el barrio del Albaicín.
\n\n
A sus faldas existía un núcleo de población importante, fundamentalmente judía, en torno al cual se produce el desarrollo de la ciudad de Granada. El primer ministro Samuel ibn Nagrella, reconstruye las abandonadas edificaciones de la colina de la Sabika e instala en ella su Palacio.
\n\n
En el siglo XII, las sucesivas oleadas de Almorávides y Almohades, ocasionan en Granada diversas luchas que tienen como escenario la Alcazaba del Albaicín y las construcciones que existían en la colina de la Sabika, sirviendo ésta de refugio unas veces a los partidarios locales andalusíes y otras a los invasores norte africanos.
    </string>
    <string name="sigloB">
Al-Ahmar, fundador de la Dinastía nazarí, se instala en 1238 en la Antigua Alcazaba del Albaicín, llamándole la atención las ruinas de la colina de la Alhambra. Decide así iniciar su reconstrucción e instalar en ella la sede de la corte, comenzando la edificación de la Alhambra que hoy conocemos.
\n\n
La Alhambra fue palacio, ciudadela y fortaleza, residencia de los sultanes nazaríes y de los altos funcionarios, servidores de la corte y de soldados de élite; alcanza su esplendor en la segunda mitad del siglo XIV, coincidiendo con los sultanatos de Yusuf I (1333-1354) y el segundo reinado de Muhammad V (1362-1391).
\n\n
Granada, capital del reino nazarí, va recibiendo paulatinamente poblaciones musulmanas a causa del avance de la conquista cristiana. La ciudad va creciendo, modificándose, creando nuevos barrios y ampliando las cercas y murallas prácticamente hasta su conquista al final del siglo XV.
    </string>
    <string name="sigloC">
Después de 1492, la Alhambra quedó establecida como Casa Real con jurisdicción exenta a cargo del Tendilla. Los Reyes Católicos ordenaron intensas reparaciones sirviéndose en gran medida de artesanos moriscos.
\n\n
El Emperador Carlos V decide, en 1526, la construcción del palacio que lleva su nombre, junto a otras construcciones muy significativas de gusto renacentista romano. La casa de Austria continuó desde Felipe II (1556-1598) y sus sucesores al cargo de la conservación de la Alhambra, admirada por humanistas y artistas como Andrea Navaggiero (1524), embajador de Venecia en la Corte de Carlos V.
\n\n
En las primeras décadas del siglo XVIII, Felipe V (1700-1746) desposee de la alcaldía al Marqués de Mondéjar, heredero del Conde de Tendilla, comenzando una etapa de abandono prácticamente hasta el reinado de Carlos IV (1788-1808).
    </string>
    <string name="sigloD">
La ocupación napoleónica supuso un episodio negativo para la Alhambra, por la voladura en 1812, al retirarse el ejército francés. Sólo el arrojo de un soldado español pudo evitar casi su total destrucción.
\n\n
A una etapa de reivindicaciones acerca del estado del monumento, secundadas activamente por Washington Irving (1783-1859) se suma un creciente interés de la sociedad por los jardines de la Alhambra y el orientalismo que evoca en el imaginario romántico, muy bien reflejado en las artes plásticas del momento.
\n\n
Con la revolución de 1868 la Alhambra queda desligada de la Corona y pasa al dominio del Estado, declarándose en 1870 “monumento nacional”.
\n\n
Con la entrada del siglo XX, el cuidado de la Alhambra se confía a una Comisión (1905), sustituida en 1913 por un Patronato que en 1915 pasa a depender de la Dirección General de Bellas Artes. En 1944 se crea un nuevo Patronato que se mantiene hasta el traspaso a la Comunidad Autónoma de Andalucía de las funciones y servicios del Estado en materia de cultura.
    </string>
    <string name="patronato">Información obtenida de http://www.alhambra-patronato.es</string>
    <string name="nombreCuerpoMilitar">El cuerpo militar</string>
    <string name="cuerpoMilitar">
        Un recinto militar para guardia de élite garantizaba desde la Alcazaba la seguridad interior del Sultán, su familia y las Instituciones del Gobierno. La Alcazaba era como una ciudad castrense independiente, estratégicamente situada y comunicada sabiamente con el resto de la Alhambra, en la que vivía la propia guardia con su familia, dotada de viviendas, aljibe, baño,… como cualquier barrio de una ciudad.
    </string>
    <string name="nombreSultan">El Sultán y su familia</string>
    <string name="sultanYFamilia">
    Existía un área palacial reservada a la vida del Sultán y su familia más allegada. En ella había oficinas de carácter administrativo, con una distribución claramente protocolaria, haciéndose más privada y áulica según se penetraba en sus dependencias. También había espacios para la reunión de la Sura o Consejo de Visires (ministros) y para las audiencias públicas. El Sultán convocaba fiestas cortesanas coincidiendo con celebraciones destacadas del calendario musulmán o del Estado.
    \n\n
    En este área palatina se distribuyen varios palacios, edificados en distintas épocas, bien mediante la adaptación y redecoración de su antecedente, o bien mediante la construcción o la adicción de un nuevo palacio en su solar. Una calle, que daba acceso a los diversos recintos de los palacios servía también para separarlos y aislarlos del resto de la Alhambra.
    </string>
</resources>