<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AprenderDatosCuriosos">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="381dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:text="@string/sabiasQue"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.313">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="366dp"
                android:layout_height="29dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="368dp"
                android:layout_height="34dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="368dp"
                android:layout_height="120dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso9" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso10" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso11" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:layout_marginEnd="4dp"
                android:text="@string/datoCurioso12" />


        </LinearLayout>


    </ScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="237dp"
        android:layout_height="99dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972"
        app:srcCompat="@mipmap/alhambra" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="79dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:srcCompat="@mipmap/bombilla" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="47dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@mipmap/lupa" />
</androidx.constraintlayout.widget.ConstraintLayout>